--- a/Private Tutor/tutor.css
+++ b/Private Tutor/tutor.css
@@ -1,38 +1,99 @@
+html{
+  margin: 2%;
+}
+
+h1{
+  color: white;
+}
+
+p{
+  color: white;
+}
+
 body {
-    font-size: 100%; /* start value*/
-    margin:auto;  /* centers the page */
-    max-width: 860px;  
-  }
- 
-  section, header, footer {
-    outline: 10px solid rgb(177, 138, 138);
-  }
- 
-  header {
-    text-align: center;
-  }
- 
-  .startpage h1 {
-    font-size: 500%; /* Big title on the start page*/
-  }
- 
-  .tagline {
-    font-size: 120%;
-    padding: 0.5em; /* distance to the border*/
-    border-top: 10px double #795294;
-    border-bottom: 10px double #795294;
-    margin: 1em 0; /* distance downwards but not upwards*/
-  }
- 
-   .menu h2 {
-    margin: 0 0 1em;
-    padding: 2em 0;
-    background-color: #36363623;  /* very light gray*/
-    text-align: center;
-  }
- 
-  footer {
-    margin-top: 3em;
-    text-align: center;
-    color: rgb(19, 2, 2);
-  }
+  font-size: 100%; /* start value*/
+  margin: auto;  /* centers the page */
+  max-width: 860px;  
+}
+
+section, header, footer {
+  outline: 4px solid rgb(223, 184, 77);
+}
+
+.threepixls {
+  padding-left: 3px;
+}
+
+header {
+  text-align: center;
+}
+
+.startpage h1 {
+  font-size: 500%; /* Big title on the start page*/
+}
+
+.tagline {
+  font-size: 120%;
+  padding: 0.5em; /* distance to the border*/
+  border-top: 2px double #FFA500;
+  margin: 1em 0; /* distance downwards but not upwards*/
+}
+
+ .menu h2 {
+  margin: 0 0 1em;
+  padding: 2em 0;
+  background-color: #e8eeed;  /* very light gray*/
+  text-align: center;
+}
+
+.hwrap{
+  margin: 100px auto;
+  width: 700px;
+  height: 250px;
+  background-image: url(https://pbs.twimg.com/media/FCeii-XX0AYhUIa?format=jpg&name=large); /* or url(https://www.....) if the image is online */
+
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  box-shadow: 0px 0px 400px 80px rgba(255, 255, 255, 0.4);
+}
+
+.menu a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+.menu a:focus
+.menu a:hover {
+  text-decoration: underline;
+  color: #9b624c;
+}
+
+.menu h2{
+  margin: 0 0 1em;
+  padding: 2em 0;
+  background-color: #000000;
+  text-align: center;
+  box-shadow: inset 0 0 20px #c49c2f;
+  border-radius: 30%;
+}
+
+footer {
+  margin-top: 3em;
+  text-align: center;
+  color: rgb(214, 177, 177);
+}
+
+.startpage{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.startpage header, .startpage footer {
+  flex: 0 0 100%;
+}
+
+.startpage section{
+  flex: 0 0 30%;
+}
