--- a/Private Tutor/tutor.css
+++ b/Private Tutor/tutor.css
@@ -16,7 +16,8 @@ body {
   max-width: 860px;  
 }
 
-section, header, footer {
+
+footer {
   outline: 4px solid rgb(223, 184, 77);
 }
 
@@ -49,13 +50,13 @@ header {
 .hwrap{
   margin: 100px auto;
   width: 700px;
-  height: 250px;
+  height: 300px;
   background-image: url(https://pbs.twimg.com/media/FCeii-XX0AYhUIa?format=jpg&name=large); /* or url(https://www.....) if the image is online */
 
   background-size: cover;
   background-position: center;
   position: relative;
-  box-shadow: 0px 0px 400px 80px rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 0px 2px 4px rgba(255, 255, 255, 0.4);
 }
 
 .menu a {
@@ -72,9 +73,9 @@ header {
 .menu h2{
   margin: 0 0 1em;
   padding: 2em 0;
-  background-color: #000000;
+  background-color: #ff8b0636;
   text-align: center;
-  box-shadow: inset 0 0 20px #c49c2f;
+  box-shadow: inset 0 0 20px #ff9900;
   border-radius: 30%;
 }
 
