--- a/Standard Website/navigation.css
+++ b/Standard Website/navigation.css
@@ -9,7 +9,7 @@ body{
     background-color: gray;
     width: 100;
     overflow: hidden;
-    border: 1px solid#555;
+    border: 0px solid#555;
 }
 .navbar li {
     float: left;
@@ -31,6 +31,13 @@ background-color: rgb(0, 0, 0);
 color: rgb(236, 208, 208);
 /*background colour is the colour of the boxes, while color is the colour of the text*/
 }
+
+.logoimage {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        overflow: hidden;
+  }
 
 .bodystyling{
     background-image: url(https://media.istockphoto.com/vectors/blurred-gradiant-mesh-background-vector-id1126426945?k=20&m=1126426945&s=612x612&w=0&h=fqeV9K-dM8C-uQU-tq2QYlRVCMzLY0zUhTDoeXc7uC4=);
