--- a/Standard Website/navigation.css
+++ b/Standard Website/navigation.css
@@ -2,42 +2,8 @@ body{
     margin: 0;
     padding: 0;
 }
-.navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(153, 104, 64);
-    width: 100;
-    overflow: hidden;
-    border: 0px solid#555;
-}
-.navbar li {
-    float: left;
-    /*Makes the list go into the left corner*/
-    text-align: center;
-    /*makes the text centered from the float point (which is now left)*/
-}
 
-.navbar a {
-    display:block;
-    color: rgb(255, 255, 255);
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 43px;
-    /*this all makes the clickable text turn into clickable blocks*/
-}
 
-.navbar li a:hover{
-color: rgb(0, 0, 0);
-/*background colour is the colour of the boxes, while color is the colour of the text*/
-}
-
-.logoimage {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        overflow: hidden;
-  }
 
 .normalized {
     padding-left: 2%;
@@ -146,6 +112,13 @@ color: rgb(0, 0, 0);
     height: 500px; /* Some height */
   }
 
+  .image-container3 {
+    background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/indoor-dog-toys-1587002073.jpg?crop=1.00xw:0.751xh;0,0.161xh&resize=1200:*");
+    background-size: cover;
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 500px; /* Some height */
+  }
+
   .text {
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -195,12 +168,11 @@ color: rgb(0, 0, 0);
 .bodystyling4{
     background-image: url(https://media.istockphoto.com/photos/white-paper-background-picture-id1040425512?b=1&k=20&m=1040425512&s=170667a&w=0&h=mo6rWtHjzwQCJuwcBjRBzPuSzvZ-iDWqpAHDDrXETOg=);
     background-size: cover
-
 }
 
 
-.bodystyling2 img {
-  border: 1px solid #ddd;
+.items img {
+  border: 0px solid #ddd;
   border-radius: 4px;
   padding: 5px;
   width: 150px;
@@ -227,7 +199,8 @@ color: rgb(0, 0, 0);
   list-style-type: none;
   background-color: #fff;
   padding: 16px;
-  border-radius: 4px;
+  border: burlywood solid 3px;
+  border-radius: 2px;
 }
 
 .items li img {
@@ -257,3 +230,169 @@ color: rgb(0, 0, 0);
   float: right;
 }
 
+.logoimage {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(153, 104, 64);
+    width: 100;
+    overflow: hidden;
+    border: 0px solid#555;
+}
+.navbar li {
+    float: left;
+    /*Makes the list go into the left corner*/
+    text-align: center;
+    /*makes the text centered from the float point (which is now left)*/
+}
+
+.navbar a {
+    display:block;
+    color: rgb(255, 255, 255);
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 43px;
+    /*this all makes the clickable text turn into clickable blocks*/
+}
+
+.navbar li a:hover{
+color: rgb(0, 0, 0);
+/*background colour is the colour of the boxes, while color is the colour of the text*/
+}
+
+.socials body {
+    margin:0;
+    padding:0;
+    background:#ccc;
+    font-family: 'Roboto Condensed', sans-serif;
+  
+  }
+  
+  .socials ul {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    display:flex;
+    margin:0;
+    padding:0;
+  }
+  
+  .socials ul li {
+    list-style:none;
+    margin:0 5px;
+  }
+  
+  .socials ul li a .fa {
+    font-size: 40px;
+    color: #262626;
+    line-height:80px;
+    transition: .5s;
+    padding-right: 14px;
+  }
+  
+  .socials ul li a span {
+    padding:0;
+    margin:0;
+    position:absolute;
+    top: 30px;
+    color: #262626;
+    letter-spacing: 4px;
+    transition: .5s;
+  }
+  
+  .socials ul li a {
+    text-decoration: none;
+    display:absolute;
+    display:block;
+    width:210px;
+    height:80px;
+    background: #fff;
+    text-align:left;
+    padding-left: 20px;
+    transform: rotate(-30deg) skew(25deg) translate(0,0);
+    transition:.5s;
+    box-shadow: -20px 20px 10px rgba(0,0,0,.5);
+  }
+  .socials ul li a:before {
+    content: '';
+    position: absolute;
+    top:10px;
+    left:-20px;
+    height:100%;
+    width:20px;
+    background: #b1b1b1;
+    transform: .5s;
+    transform: rotate(0deg) skewY(-45deg);
+  }
+  .socials ul li a:after {
+    content: '';
+    position: absolute;
+    bottom:-20px;
+    left:-10px;
+    height:20px;
+    width:100%;
+    background: #b1b1b1;
+    transform: .5s;
+    transform: rotate(0deg) skewX(-45deg);
+  }
+  
+  .socials ul li a:hover {
+    transform: rotate(-30deg) skew(25deg) translate(20px,-15px);
+    box-shadow: -50px 50px 50px rgba(0,0,0,.5);
+  }
+  
+  .socials ul li:hover .fa {
+    color:#fff;
+  }
+  
+  .socials ul li:hover span {
+    color:#fff;
+  }
+  
+  .socials ul li:hover:nth-child(1) a{
+    background: #3b5998;
+  }
+  .socials ul li:hover:nth-child(1) a:before{
+    background: #365492;
+  }
+  .socials ul li:hover:nth-child(1) a:after{
+    background: #4a69ad;
+  }
+  
+  .socials ul li:hover:nth-child(2) a{
+    background: #00aced;
+  }
+  .socials ul li:hover:nth-child(2) a:before{
+    background: #097aa5;
+  }
+  .socials ul li:hover:nth-child(2) a:after{
+    background: #53b9e0;
+  }
+  
+  .socials ul li:hover:nth-child(3) a{
+    background: #dd4b39;
+  }
+  .socials ul li:hover:nth-child(3) a:before{
+    background: #b33a2b;
+  }
+  .socials ul li:hover:nth-child(3) a:after{
+    background: #e66a5a;
+  }
+  
+  .socials ul li:hover:nth-child(4) a{
+    background: #e4405f;
+  }
+  .socials ul li:hover:nth-child(4) a:before{
+    background: #d81c3f;
+  }
+  .socials ul li:hover:nth-child(4) a:after{
+    background: #e46880;
+  }
