--- a/Standard Website/navigation.css
+++ b/Standard Website/navigation.css
@@ -119,6 +119,20 @@ body{
     height: 500px; /* Some height */
   }
 
+  .image-container4 {
+    background-image: url("https://www.aspca.org/sites/default/files/apcc_people-foods-to-avoid_main-image.jpg");
+    background-size: cover;
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 500px; /* Some height */
+  }
+
+  .image-container5 {
+    background-image: url("https://www.burnhills.com/images/weatherbeeta-parka-1200d-deluxe-dog-coat-olive-tweed-print-p5312-15281_zoom.jpg");
+    background-size: cover;
+    position: relative; /* Needed to position the cutout text in the middle of the image */
+    height: 500px; /* Some height */
+  }
+
   .text {
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -137,14 +151,13 @@ body{
   }
 
 
-  .footer {
+.footer {
       margin-top: 10%;
       padding-top: 40px;
       text-align: center;
       background-color: rgb(87, 55, 30);
       width: 100;
       height: 40px;
-      overflow: scroll;
       color: white;
   }
   
@@ -258,7 +271,7 @@ body{
     color: rgb(255, 255, 255);
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 43px;
+    font-size: 40px;
     /*this all makes the clickable text turn into clickable blocks*/
 }
 
